[package]
name = "local_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
fern = "0.6.2"
homedir = "0.2.1"
thiserror = "1.0.57"
chrono = "0.4.34"
log = "0.4.20"
fern_colored = "0.6.1"
humantime = "2.1.0"
