[package]
name = "local_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
fern = "0.6.2"
humantime = "2.1.0"
log = "0.4.20"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols" # ? minimize binary size
